@@ -3,7 +3,8 @@ Revision history for SVGPDF
 0.000
 
 	- Internal: Flipped coordinates.
-	- Leave vwidth/vheight as is so caller can scale to font size,
+	- Leave vwidth/vheight as is so caller can scale to font size.
+	- Add rounded rectangles.
 
 0.060	2023-08-18
 
